# cpp_practice

./: STATICVECTORSANDCUSTOMSORT.cpp
Operators/: overloading.cpp
auto-keyword/: main.cpp
cmake_Stuff/cmake_1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BASIC.md  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_1.sln  cmake_1.vcxproj  cmake_1.vcxproj.filters  cmake_install.cmake  main.cpp
cmake_Stuff/cmake_2/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.cpp
cmake_Stuff/cmake_2/functions/: CMakeLists.txt  cmake_install.cmake  functions.cpp
cmake_Stuff/cmake_basic/: CMakeLists.txt  link_to_video.txt  main.cpp
cpp_practice/Singleton/: main.cpp
cpp_practice/labs_session_1/lab_1/: main.cpp
cpp_practice/labs_session_1/lab_2/: main.cpp
cpp_practice/labs_session_1/lab_3/: main.cpp
cpp_practice/labs_session_1/lab_4/: main.cpp
cpp_practice/labs_session_1/lab_5/: main.cpp
cpp_practice/labs_session_1/lab_6/: main.cpp
cpp_practice/labs_session_1/lab_7/: main.cpp
cpp_practice/labs_session_2/data-alignment/: main.cpp
cpp_practice/labs_session_2/exercises/lab_1/: main.cpp
cpp_practice/labs_session_2/exercises/lab_2/: main.cpp
cpp_practice/labs_session_2/exercises/lab_4/: main.cpp
cpp_practice/labs_session_2/exercises/lab_7/: main.cpp
cpp_practice/labs_session_2/raw-strings/: main.cpp
cpp_practice/labs_session_3/bind/: main.cpp
cpp_practice/labs_session_3/lambdas/: main.cpp
cpp_practice/labs_session_3/lrvalues/: main.cpp
cpp_practice/labs_session_3/move_semantics/: main.cpp
decltype/: main.cpp
exercises/lab_10/: main.cpp
exercises/lab_3/: goats.txt  main.cpp
exercises/lab_8/: main.cpp
file_handling/: hello.sepiol  read.cpp
friends/: a.out  main.cpp  someClass.cpp  someClass.h  someOtherClass.cpp  someOtherClass.h
function_pointers/: main.cpp
functions/: Utilities.cpp  Utilities.h  main.cpp
header_files/: functions.cpp  functions.h  functions_and_headers.cpp
indirection/: main.cpp
memory_management/: main.cpp  rule_of_three.cpp  smart_pointers.cpp
opoverload/: main.cpp
range-based-loop/: main.cpp
strings_and_containers/string/: exercise1.cpp  strings.cpp
templates/: main.cpp
user_defined_types/classes/: Person.cpp  Person.h  app  main.cpp  test  test_format.cpp
user_defined_types/enums/: main.cpp
user_defined_types/inheritance/: main.cpp
user_defined_types/structs/: main.cpp
(+1 files in other folders)
